css/interface.css
.fl-widget-provider {
  width: 100%;
  border: 0;
  background-color: transparent;
}

#image-manager iframe {
  position: absolute;
  width: 100%;
  height: 100%;
}

.image-widget-holder {
  padding: 15px 0;
  position: absolute;
  left: 15px;
  right: 15px;
  top: 0;
  bottom: 0;
}

html.provider-inline .image-widget-holder {
  position: relative;
  left: 0;
  right: 0;
}

#preview-image {
  position: relative;
  text-align: center;
  border: 1px solid #d9ddde;
  background-color: #FFF;
}

#preview-image img {
  width: auto;
  max-width: 100%;
  max-height: 250px;
}

#preview-image-editor {
  position: relative;
  text-align: center;
  border: 1px solid #d9ddde;
  background-color: transparent;
  padding: 10px;
  min-height: 230px;
}

#preview-image-editor img {
  width: auto;
  max-width: 100%;
  max-height: 230px;
}

#image-editor-changes {
  display: none;
}

.no-image {
  display: none;
}

.dimensions {
  float: right;
  margin-bottom: 10px;
  background-color: #d9ddde;
  padding: 3px 6px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.image-editor {
  overflow-x: hidden;
  display: none;
}

.image-editor-crop {
  display: none;
}

.image-editor-resize {
  display: none;
}

.image-editor-rotate {
  display: none;
}

.image-editor-crop .input-group-addon {
  width: 44px;
}

.image-editor-crop .input-group {
  width: 100%;
}

.image-widget-holder .form-inline {
  margin-bottom: 15px;
}

#radio-warning {
  display: none;
}

#showEditButton,
.image-editor .form-inline .btn {
  margin-right: 6px;
  font-size: 0.8em;
  line-height: 3em;
  padding: 0 1.1em;
}

.image-editor-resize .form-horizontal {
  margin-top: 0;
}

#ratio-warning {
  clear: both;
  display: none;
  margin-top: 15px;
}

#loader {
  position: relative;
  top: 100px;
}

#preview-image-editor {
  display: flex;
  align-items: center;
  justify-content: center;
}

#preview-image-editor #loader {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 100px;
  height: 54px;
}

.editCanvasWrapper {
  display: inline-block;
  font-size: 0;
}

.editCanvasWrapper canvas {
  margin: auto;
  max-height: 250px !important;
  max-width: 100%;
  vertical-align: middle;
}

.margin-top-0 {
  margin-top: 0 !important;
}

